--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,14 +6,11 @@ Date: 2017-01-22
 Author: James Curley
 Maintainer: James Curley <jc3181@columbia.edu>
 Description: Analyzing English & European soccer results data from 1871-2016.
-Depends: R (>= 2.10)
+Depends: R (>= 3.5),
+        dplyr
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 Suggests:
 RoxygenNote: 6.0.1
-Imports:
-    dplyr,
-    magrittr,
-    tidyr,
-    utils
+Imports: magrittr, tidyr, utils
