Make code more Tidyverse friendly, and easier to read.
1. readr::read_csv instead of read.csv
2. stringr::sub_str instead of substr
3. map, and reduce instead of copy pasting code.
4. bind_rows instead of rbind

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,5 +31,4 @@ export(totgoals)
 export(turkey_current)
 export(worstlosses)
 importFrom(magrittr,"%>%")
-importFrom(utils,"head")
-importFrom(utils,"read.csv")
+importFrom(magrittr,'%>%')
