--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,10 @@ Author: James Curley, Nitesh Turaga
 Maintainer: James Curley <jc3181@columbia.edu>
 Description: Analyzing English & European soccer results data from 1871-2016.
 Depends: R (>= 3.5),
-        dplyr
+        tidyverse,
+        lubridate
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
-Imports: magrittr, tidyr, utils
+RoxygenNote: 6.1.1
+Imports: tidyr, utils
