--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,9 @@ Date: 2017-01-22
 Author: James Curley, Nitesh Turaga
 Maintainer: James Curley <jc3181@columbia.edu>
 Description: Analyzing English & European soccer results data from 1871-2016.
-Depends: R (>= 3.5),
-        tidyverse,
-        lubridate
+Depends: R (>= 3.5)
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: tidyr, utils
+Imports: 
